Connection between two client enabled, additional process creation/fork disabled for now

--- a/websocket_client.html
+++ b/websocket_client.html
@@ -58,7 +58,7 @@ function write(text) {
 	terminal.innerHTML = '<li>'+dateText+' '+text+'</li>'+terminal.innerHTML;
 }
 </script>
-
+<button onclick="ws.send('Hi you!')">Send Hi</button>
 </head>
 <body>
 	<a href="websocket_client.html" target="_blank">Add another client</a>
